# iris

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  release-please-config.json
.github/: dependabot.yml
.github/workflows/: build-smoke.yml  dependabot-auto-merge.yml  lint.yml  release-please.yml  release.yml  unit-tests.yml  validate-build.yml  variant-integration.yml
.gitlab/issue_templates/: bug.md  feature.md
.gitlab/merge_request_templates/: default.md
core/: pyproject.toml
core/core/: __init__.py  aliases.py  app_meta.py  catalog.py  context.py  openapi_dynamic.py  redact.py  startup_warnings.py
core/core/auth/: admin.py  creds.py  user.py
core/core/config/: settings.py  source.py  source_db.py
core/core/engine/: circuit_breaker.py  cursor.py  paramstyle.py  pool_sizing.py  query_engine.py  query_params.py  schema_cache.py
core/core/engine/expression/: __init__.py  analyze.py  ast.py  emit.py  parse.py  tokenize.py
core/core/errors/: classify.py  exceptions.py  handler.py  messages.py
core/core/handlers/: __init__.py  inventory.py
core/core/loaders/: allowlist.py  contract.py  queries.py  validation.py
core/core/observability/: kafka_logging.py  logging_config.py  metrics.py  tracing.py
core/core/routes/: __init__.py  admin.py  inventory.py  queries.py  readiness.py
core/core/testing/: fixtures.py  integration_suite.py
core/tests/: conftest.py  test_admin_auth.py  test_aliases.py  test_allowlist.py  test_app_meta.py  test_auth.py  test_auth_user.py  test_base_settings.py  test_catalog.py  test_circuit_breaker.py  test_config_source.py  test_config_source_db.py  test_cursor.py  test_custom_queries.py  test_entrypoint.py  test_error_classify.py  test_error_handler.py  test_expression.py  test_kafka_logging.py  test_kafka_logging_integration.py  test_logging_config.py  test_metrics.py  test_paramstyle.py  test_paramstyle_emission.py  test_pool_sizing.py  test_query_engine.py  test_query_params.py  test_readiness.py  test_redact_integration.py  test_schema_cache.py  test_startup_warnings.py  test_tracing.py  test_view_defs.py
docs/: _config.yml  build.py
docs/reference/: architecture.md  variants.md  versioning.md
docs/tmpl/: README.md.tmpl
docs/tmpl/reference/: architecture.md.tmpl  variants.md.tmpl  versioning.md.tmpl
docs/tmpl/user-guide/: external-configuration.md.tmpl  operating.md.tmpl  security-posture.md.tmpl  using.md.tmpl  when-to-use.md.tmpl
docs/user-guide/: external-configuration.md  operating.md  security-posture.md  using.md  when-to-use.md
scripts/: entrypoint.py
test-infra/: docker-compose.yml  init-mysql.sql  init-oracle.sql  init-postgres.sql
test-infra/promotion/: README.md  conftest.py  lib.py  test_promotion.py
variants/mariadb/: .env.example  Dockerfile
variants/mariadb/app/: config.py  db.py  main.py
variants/mariadb/k8s/: hpa.yaml  secret.yaml
variants/mariadb/tests/: test_integration.py  test_unit.py
variants/mariadb/tests/fixtures/queries/reports/: products_by_category.yaml
variants/mysql/: .env.example  Dockerfile  requirements.txt
variants/mysql/app/: config.py  db.py  main.py
variants/mysql/k8s/: deployment.yaml  secret.yaml
variants/mysql/tests/: conftest.py  test_integration.py  test_unit.py
variants/oracle/: .env.example  Dockerfile  requirements.txt
variants/oracle/app/: config.py  db.py  main.py
variants/oracle/k8s/: secret.yaml  service.yaml
variants/oracle/tests/: conftest.py  test_integration.py  test_unit.py
variants/oracle/tests/fixtures/queries/reports/: category_summary.yaml  products_by_category.yaml
variants/postgres/: .env.example  Dockerfile  requirements.txt
variants/postgres/app/: config.py  db.py  main.py
variants/postgres/k8s/: secret.yaml
variants/postgres/tests/: conftest.py  test_integration.py  test_unit.py
variants/postgres/tests/fixtures/queries/reports/: category_summary.yaml
variants/trino/: .env.example  Dockerfile  requirements.txt
variants/trino/app/: config.py  db.py  main.py
variants/trino/k8s/: secret.yaml
variants/trino/tests/: conftest.py  test_integration.py  test_unit.py
variants/trino/tests/fixtures/validation/public/: products.yaml
